syntax = "proto3";

package rate;

service RateService {
  rpc GetRates (RatesRequest) returns (RatesResponse);
}

message RatesRequest {
  optional string baseCurrency = 1;
}

message RatesResponse {
  map<string, double> rates = 1;
}
